--- a/index.html
+++ b/index.html
@@ -103,6 +103,15 @@
 				</section>
 			</div>
 			</div>
+			<div class="pagenation">
+				<p class="pagenation-text"><<</p>
+				<p class="pagenation-text"><</p>
+				<p class="pagenation-text">1</p>
+				<p class="pagenation-text">2</p>
+				<p class="pagenation-text">3</p>
+				<p class="pagenation-text">></p>
+				<p class="pagenation-text">>></p>
+			</div>
 		</section>
 		<div class="sidebar">
 			<section class="popular">
