--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<!-- CSSファイルの読み込み -->
+	<meta name="viewport" content="width=device-width,initial-scale-0.1">
+	<script src="https://kit.fontawesome.com/a8abd75a35.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="style.css">
 	<title>CARAVAN</title>
 </head>
@@ -12,6 +13,11 @@
 		<h1 class="headline">
 			<a href="index.html">CARAVAN</a>
 		</h1>
+		<div class="social">
+			<i class="fab fa-facebook-square"></i>
+			<i class="fab fa-twitter-square"></i>
+			<i class="fab fa-instagram"></i>
+		</div>
 	</header>
 	<!-- nav -->
 	<nav>
